--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@react-navigation/material-top-tabs": "^5.3.13",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
+    "@types/react-native-snap-carousel": "^3.8.2",
+    "@types/react-redux": "^7.1.16",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
@@ -22,9 +26,15 @@
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "12.1.0",
     "react-native-tab-view": "^2.15.2",
     "react-native-web": "~0.13.12",
-    "react-navigation-drawer": "^2.6.0"
+    "react-navigation-drawer": "^2.6.0",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
